2008-05-06 Holger Vogt
 * src/frontend/outitf.c: suppress printing of "Reference value" into log-file
   under Windows 

2008-05-03 Dietmar Warning
 * src/include/ngspice.h, src/main.c: srandom has a macro in ngspice.h as a 
   central place - should be sufficient also under windows

2008-05-01 Holger Vogt
 * src/frontend/com_hardcopy.c: bug no. 1885979 removed: currentgraph saved 
   and restored after hardcopy. 

2008-04-28 Holger Vogt
 * src/frontend/plotting/graf.c: remove iplot bug by changing line 686. 

2008-04-27 Dietmar Warning
 * src/frontend/inpcom.c: change _DEBUG to TRACE - unique debug switches
 * src/frontend/plotting/gnuplot.c: adding windows gnuplot, some modifications

2008-04-26 Holger Vogt
 * src/frontend/inpcom.c: inp_sort_params() now uses dynamic memory allocation
   on the heap: no enlargement of stack size is necessary. 

2008-04-25 Holger Vogt
 * src/frontend/inpcom.c: In inp_fix_param_values() xspice variables of type 
   complex are recognized also in vectors.

2008-04-23 Holger Vogt
 * src/frontend/inpcom.c: In inp_fix_param_values() xspice variables of type 
   complex are recognized. Vectors of complex variables still missing.
   
2008-04-20 Holger Vogt
 * src/frontend/inpcom.c: .cmodel added for xspice compatibility:
   inp_fix_param_values() replaces .cmodel with .model and then skips entire
   line, thus no numparam search and setting of {} will happen.

2008-04-20 Dietmar Warning
 * src/spicelib/devices/bsim*/b*ld.c, src/math/ni/niconv.c: Reconstruct NEWCONV
   macro for better bsim3,4,soi transfer from Berkeley, macro is defined by
   default in spice3f4 which is used by UCB for testing. Now same behaviour in ngspice
   - tested and should not impact convergence behaviour.
 * src/frontend/winprint.c: pragmas only for MSC.
 * configure.in tests/Makefile.am, tests/bsim3soi/*.cir, *.out, *.mod: new testcase 
   for bsim3soi (origin UCB small modifications).

2008-04-19 Holger Vogt